clusters/workbench/apps/common/local-network-services/router-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: router
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 256m
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: router-credentials
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    external-dns.kubernetes.io/cloudflare-proxied: "false"
    external-dns.kubernetes.io/target: ${workbench_services_ip}
  labels:
    use-cloudflare-dns-solver: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - &host "router.${personal_domain}"
      secretName: *host
  rules:
    - host: *host
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: router
                port:
                  number: 443
